[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/filtro_completo.png" type="Texture" id=2]
[ext_resource path="res://nuvem.png" type="Texture" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Player/DashSpReady.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 32.0

[sub_resource type="Curve" id=8]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0.0247557, 0.25293 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -1.04453, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]

flags = 4
width = 2048
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=6]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 15.0
flatness = 0.0
gravity = Vector3( 0, -25, 0 )
initial_velocity = 0.0
initial_velocity_random = 0.0
angular_velocity = 40.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.1
scale_curve = SubResource( 3 )
color = Color( 0.460938, 0.224673, 0.0162048, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Emission Shape" ]

[sub_resource type="CircleShape2D" id=7]

custom_solver_bias = 0.0
radius = 375.0

[node name="Player" type="KinematicBody2D"]

position = Vector2( 190.27, 190.868 )
scale = Vector2( 0.5, 0.5 )
input_pickable = false
collision_layer = 4
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_group_": true
}
draw_line = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

visible = false
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="." index="1"]

position = Vector2( 0, -0.583984 )
enabled = true
editor_only = false
texture = ExtResource( 2 )
offset = Vector2( 0, 0 )
texture_scale = 0.5
color = Color( 1, 1, 1, 1 )
energy = 0.5
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Shadow" ]

[node name="DashTrail" type="Particles2D" parent="." index="2"]

emitting = false
amount = 10
lifetime = 1.5
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 6 )
texture = ExtResource( 3 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Textures", "Time" ]

[node name="Sprite" type="Sprite" parent="." index="3"]

texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Visao" type="Area2D" parent="." index="4"]

editor/display_folded = true
visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 3
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visao" index="0"]

shape = SubResource( 7 )

[node name="DashTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 4.0
one_shot = true
autostart = false

[node name="DashCooldown" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="DashSpReady" type="Sprite" parent="." index="7"]

self_modulate = Color( 0.00390625, 1, 0.0428162, 1 )
position = Vector2( 0, -44 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )
script = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[connection signal="body_entered" from="Visao" to="." method="_on_Visibility_body_entered"]

[connection signal="body_exited" from="Visao" to="." method="_on_Visibility_body_exited"]

[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]

[connection signal="timeout" from="DashCooldown" to="." method="_on_DashCooldown_timeout"]


